Fixed a bunch of IDEA warnings